--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ script:
 - make
 notifications:
   email: jesse.szwedko@gmail.com
+before_deploy:
+- make dist
 deploy:
   provider: releases
   api_key:
